# medley_annual_report

./: .gitignore  README.md  getIssues.sh  getPRs.sh  processEmails.py  processIssues.py  processPRs.py  pyproject.toml
rag/: .env  2025_Medley_Annual_Report_OUTLINE.docx  agent.py  prompts.md  prompts.py
