[project]
name = "medley-annual-report"
version = "0.1.0"
description = "An experiment using AI to generate a draft version of the 2025 Medley Annual Report"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-adk>=1.22.0",
    "pathlib>=1.0.1",
    "ruff>=0.14.11",
    "typing>=3.10.0.0",
    "vertexai>=1.43.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
     "E",   # pycodestyle
     "F",   # pyflakes
     "W",   # pycodestyle warnings
     "I",   # isort
     "C",  # flake8-comprehensions
     "B",   # flake8-bugbear
     "UP", # pyupgrade
     "RUF", # ruff specific rules
 ]
ignore = ["E501", "C901"] # ignore line too long, too complex

